*fix: added z-index to mobile menu

--- a/doc2/private/style/header/header.scss
+++ b/doc2/private/style/header/header.scss
@@ -49,6 +49,7 @@
     top: 0;
     left: 0;
     position: fixed;
+    z-index: 1;
     width: 100%;
     height: 100%;
     background: $mobile-menu-background;
